--- a/package.json
+++ b/package.json
@@ -27,23 +27,28 @@
     "history": "^4.6.3",
     "image-webpack-loader": "^3.3.1",
     "json-loader": "^0.5.7",
-    "material-ui": "^0.18.7",
+    "material-ui": "v1.0.0-beta.3",
     "mocha": "^3.4.2",
     "postcss-cssnext": "^3.0.2",
     "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.6",
     "postcss-reporter": "^4.0.0",
+    "ramda": "^0.24.1",
     "react": "^15.6.1",
+    "react-autosuggest": "^9.3.2",
+    "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "react-router-redux": "^5.0.0-alpha.6",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.0",
     "satellite.js": "^1.3.0",
     "script-loader": "^0.7.0",
     "style-loader": "^0.18.2",
-    "tle.js": "^1.0.0",
+    "text-loader": "^0.0.1",
+    "tle.js": "1.0.7",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.6.1",
     "webpack-simple-progress-plugin": "^0.0.2"
