--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "scripts": {
     "dev": "cp src/index.html dist/public/index.html && ./node_modules/.bin/webpack-dev-server --config ./webpack.config.js --hot --inline",
-    "dist": "./dist.sh"
+    "dist": "./dist.sh",
+    "celestrak": "./update-celestrak-cache.sh"
   }
 }
