--- a/package.json
+++ b/package.json
@@ -58,6 +58,6 @@
   "scripts": {
     "dev": "cp src/index.html dist/public/index.html && ./node_modules/.bin/webpack-dev-server --config ./webpack.config.js --hot --inline",
     "dist": "./dist.sh",
-    "celestrak": "./update-celestrak-cache.sh"
+    "tles": "./update-celestrak-cache.sh"
   }
 }
