--- a/new/.babelrc
+++ b/new/.babelrc
@@ -1,14 +1,17 @@
 {
   presets: [
     [
-      '@babel/preset-env',
+      "@babel/preset-env",
       {
-        modules: false
+        "modules": false,
+        "targets": {
+          "node": "10"
+        }
       }
     ],
-    '@babel/preset-react'
+    "@babel/preset-react"
   ],
   plugins: [
-    'react-hot-loader/babel'
+    "react-hot-loader/babel"
   ]
 }
