--- a/new/package.json
+++ b/new/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "clean": "rm dist/bundle.js",
-    "build-dev": "webpack -d --mode development",
-    "build-prod": "webpack -p --mode production",
+    "clean": "rm -r dist/*",
+    "build-dev": "npm run clean && webpack -d --mode development",
+    "build-prod": "npm run clean && webpack -p --mode production",
     "start": "webpack-dev-server --hot --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,7 +15,7 @@
   "devDependencies": {
     "@babel/core": "^7.7.4",
     "@babel/plugin-proposal-export-default-from": "^7.5.2",
-    "@babel/preset-env": "^7.7.4",
+    "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
     "@hot-loader/react-dom": "^16.11.0",
     "@storybook/addon-docs": "^5.2.6",
@@ -39,6 +39,7 @@
     "postcss-loader": "^3.0.0",
     "prettier": "^1.18.2",
     "prop-types": "^15.7.2",
+    "raw-loader": "^4.0.0",
     "style-loader": "^1.0.0",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.2",
@@ -46,11 +47,22 @@
     "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
+    "@material-ui/core": "^4.7.1",
+    "@material-ui/lab": "^4.0.0-alpha.36",
+    "date-fns": "^2.8.1",
+    "mapbox-gl": "^1.5.1",
     "prop-types": "^15.7.2",
+    "ramda": "^0.26.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-hook-visible-satellites": "^1.0.3",
     "react-hot-loader": "^4.12.18",
-    "react-router-dom": "^5.1.2"
+    "react-mapbox-gl": "^4.7.3",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "optionalDependencies": {
     "react-transition-group": "^4.3.0"
