--- a/new/package.json
+++ b/new/package.json
@@ -36,6 +36,7 @@
     "html-webpack-template": "^6.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
+    "postcss-custom-media": "^7.0.8",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.18.2",
     "prop-types": "^15.7.2",
@@ -55,7 +56,7 @@
     "ramda": "^0.26.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-hook-visible-satellites": "^1.0.3",
+    "react-hook-visible-satellites": "^1.1.1",
     "react-hot-loader": "^4.12.18",
     "react-mapbox-gl": "^4.7.3",
     "react-redux": "^7.1.3",
