--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "scripts": {
     "dev": "./node_modules/.bin/webpack-dev-server --config ./webpack.config.js --hot --inline",
+    "start": "npm run dev",
     "dist": "./dist.sh",
     "tles": "./update-celestrak-cache.sh"
   },
