--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build-dev": "npm run clean && webpack -d --mode development",
     "build-prod": "npm run clean && webpack -p --mode production",
     "start": "webpack-dev-server --hot --mode development",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "David Calhoun",
   "license": "ISC",
