add npm build alias

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean": "rm -r dist/* || true",
     "build-dev": "npm run clean && webpack -d --mode development",
     "build-prod": "npm run clean && webpack -p --mode production",
+    "build": "npm run build-prod",
     "start": "webpack-dev-server --hot --mode development",
     "test": "jest"
   },
