--- a/package.json
+++ b/package.json
@@ -15,57 +15,58 @@
   "author": "David Calhoun",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.8.6",
+    "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-export-default-from": "^7.5.2",
-    "@babel/preset-env": "^7.8.6",
-    "@babel/preset-react": "^7.7.4",
-    "@hot-loader/react-dom": "^16.12.0",
-    "@storybook/addon-docs": "^5.3.14",
-    "@storybook/react": "^5.3.14",
-    "@testing-library/dom": "^6.12.2",
-    "@testing-library/jest-dom": "^5.1.1",
-    "@testing-library/react": "^9.4.1",
-    "autoprefixer": "^9.7.2",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-react": "^7.9.4",
+    "@hot-loader/react-dom": "^16.13.0",
+    "@storybook/addon-docs": "^5.3.17",
+    "@storybook/react": "^5.3.17",
+    "@testing-library/dom": "^7.1.3",
+    "@testing-library/jest-dom": "^5.3.0",
+    "@testing-library/react": "^10.0.1",
+    "autoprefixer": "^9.7.5",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^25.1.0",
-    "babel-loader": "^8.0.6",
+    "babel-jest": "^25.2.3",
+    "babel-loader": "^8.1.0",
     "css-loader": "^3.2.0",
     "eslint": "^6.7.1",
-    "eslint-plugin-react": "^7.18.3",
-    "eslint-plugin-react-hooks": "^2.5.0",
-    "file-loader": "^5.1.0",
-    "html-webpack-plugin": "^3.2.0",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^3.0.0",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.0.2",
     "html-webpack-template": "^6.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^25.1.0",
+    "jest": "^25.2.3",
     "postcss-custom-media": "^7.0.8",
     "postcss-loader": "^3.0.0",
-    "prettier": "^1.18.2",
+    "prettier": "^2.0.2",
     "prop-types": "^15.7.2",
     "raw-loader": "^4.0.0",
     "style-loader": "^1.1.3",
-    "url-loader": "^3.0.0",
-    "webpack": "^4.41.6",
-    "webpack-bundle-analyzer": "^3.6.0",
+    "url-loader": "^4.0.0",
+    "webpack": "^4.42.1",
+    "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "@material-ui/core": "^4.9.4",
-    "@material-ui/lab": "^4.0.0-alpha.44",
-    "date-fns": "^2.10.0",
-    "mapbox-gl": "^1.8.1",
+    "@material-ui/core": "^4.9.7",
+    "@material-ui/lab": "^4.0.0-alpha.46",
+    "date-fns": "^2.11.1",
+    "mapbox-gl": "^1.9.0",
     "ramda": "^0.27.0",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-hook-visible-satellites": "^1.1.1",
-    "react-hot-loader": "^4.12.19",
-    "react-mapbox-gl": "^4.7.3",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-hook-visible-satellites": "^2.0.1",
+    "react-hot-loader": "^4.12.20",
+    "react-mapbox-gl": "^4.8.3",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "tle.js": "^4.0.7"
   },
   "jest": {
     "moduleNameMapper": {
