--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@material-ui/lab": "^4.0.0-alpha.46",
     "date-fns": "^2.11.1",
     "mapbox-gl": "^1.9.0",
+    "postcss-global-import": "^1.0.6",
     "ramda": "^0.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
