--- a/package.json
+++ b/package.json
@@ -11,34 +11,34 @@
     "start": "webpack-dev-server --hot --mode development",
     "dev": "npm start",
     "test": "jest",
-    "bump": "! npm outdated && npm update && npm audit fix"
+    "bump": "! npm outdated && npm update && npm audit fix && npm test || echo 'Package up to date'"
   },
   "author": "David Calhoun",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-export-default-from": "^7.5.2",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-proposal-export-default-from": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
     "@hot-loader/react-dom": "^16.13.0",
-    "@storybook/addon-docs": "^5.3.18",
-    "@storybook/react": "^5.3.18",
-    "@testing-library/dom": "^7.2.2",
-    "@testing-library/jest-dom": "^5.5.0",
+    "@storybook/addon-docs": "^5.3.19",
+    "@storybook/react": "^5.3.19",
+    "@testing-library/dom": "^7.7.1",
+    "@testing-library/jest-dom": "^5.9.0",
     "@testing-library/react": "^10.0.4",
-    "autoprefixer": "^9.7.6",
+    "autoprefixer": "^9.8.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^25.5.1",
+    "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
-    "eslint": "^6.7.1",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^3.0.0",
+    "eslint": "^7.1.0",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "html-webpack-template": "^6.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^25.5.3",
+    "jest": "^26.0.1",
     "postcss-custom-media": "^7.0.8",
     "postcss-loader": "^3.0.0",
     "prettier": "^2.0.5",
@@ -47,24 +47,24 @@
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
-    "webpack-bundle-analyzer": "^3.7.0",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "@material-ui/core": "^4.9.12",
-    "@material-ui/lab": "^4.0.0-alpha.51",
-    "date-fns": "^2.12.0",
-    "mapbox-gl": "^1.10.0",
+    "@material-ui/core": "^4.10.0",
+    "@material-ui/lab": "^4.0.0-alpha.54",
+    "date-fns": "^2.14.0",
+    "mapbox-gl": "^1.10.1",
     "postcss-global-import": "^1.0.6",
     "ramda": "^0.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-hook-visible-satellites": "^2.0.2",
+    "react-hook-visible-satellites": "^2.0.3",
     "react-hot-loader": "^4.12.21",
-    "react-mapbox-gl": "^4.8.3",
+    "react-mapbox-gl": "^4.8.6",
     "react-redux": "^7.2.0",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
