--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "suncalc": "^1.8.0",
     "tle.js": "^4.1.1"
   },
   "jest": {
