--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "clean": "(rm docs/*.js && rm -r docs/*.svg) || true",
-    "build-dev": "npm run clean && webpack -d --mode development",
-    "build-prod": "npm run clean && webpack -p --mode production",
+    "cp-test-tles": "cop src/static/test-tles.txt docs",
+    "build-dev": "npm run clean && webpack --mode development",
+    "build-prod": "npm run clean && webpack --mode production",
     "build": "npm run build-prod && cp src/static/404.html docs && cp -r src/data docs",
     "start": "webpack-dev-server --hot --mode development",
     "dev": "npm start",
@@ -17,60 +18,60 @@
   "author": "David Calhoun",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.11.6",
+    "@babel/core": "^7.17.0",
     "@babel/plugin-proposal-export-default-from": "^7.10.4",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
-    "@hot-loader/react-dom": "^16.13.0",
-    "@storybook/addon-docs": "^5.3.21",
-    "@storybook/react": "^5.3.21",
-    "@testing-library/dom": "^7.24.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^10.4.9",
-    "autoprefixer": "^9.8.6",
+    "@hot-loader/react-dom": "^17.0.2",
+    "@storybook/addon-docs": "^6.4.18",
+    "@storybook/react": "^6.4.18",
+    "@testing-library/dom": "^8.11.3",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.2",
+    "autoprefixer": "^10.4.2",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.3.0",
-    "babel-loader": "^8.1.0",
-    "css-loader": "^3.6.0",
-    "eslint": "^7.9.0",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.1.2",
+    "babel-jest": "^27.5.0",
+    "babel-loader": "^8.2.3",
+    "css-loader": "^6.6.0",
+    "eslint": "^8.8.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "file-loader": "^6.1.0",
-    "html-webpack-plugin": "^4.4.1",
+    "html-webpack-plugin": "^5.5.0",
     "html-webpack-template": "^6.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.4.2",
-    "postcss-custom-media": "^7.0.8",
-    "postcss-loader": "^3.0.0",
-    "prettier": "^2.1.2",
-    "prop-types": "^15.7.2",
+    "jest": "^27.5.0",
+    "postcss-custom-media": "^8.0.0",
+    "postcss-loader": "^6.2.1",
+    "prettier": "^2.5.1",
+    "prop-types": "^15.8.1",
     "raw-loader": "^4.0.1",
-    "style-loader": "^1.2.1",
+    "style-loader": "^3.3.1",
     "url-loader": "^4.1.0",
-    "webpack": "^4.44.2",
-    "webpack-bundle-analyzer": "^3.9.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^5.68.0",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "date-fns": "^2.16.1",
-    "mapbox-gl": "^1.12.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "date-fns": "^2.28.0",
+    "mapbox-gl": "^2.7.0",
     "postcss-global-import": "^1.0.6",
-    "ramda": "^0.27.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-hook-visible-satellites": "^2.0.3",
-    "react-hot-loader": "^4.12.21",
-    "react-mapbox-gl": "^4.8.6",
-    "react-redux": "^7.2.1",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.0.4",
+    "ramda": "^0.28.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-hook-visible-satellites": "^2.0.4",
+    "react-hot-loader": "^4.13.0",
+    "react-mapbox-gl": "^5.1.1",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
+    "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
+    "redux-thunk": "^2.4.1",
     "suncalc": "^1.8.0",
-    "tle.js": "^4.1.1"
+    "tle.js": "^4.7.0"
   },
   "jest": {
     "moduleNameMapper": {
